--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,11 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-<<<<<<< HEAD
-"POT-Creation-Date: 2021-06-01 00:53+0000\n"
-=======
 "POT-Creation-Date: 2021-07-13 16:47+0000\n"
->>>>>>> v6.5.10
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -1780,21 +1776,6 @@ msgstr "ID приложения WeChat "
 msgid "The WeChat App secret"
 msgstr "Секрет приложения WeChat "
 
-<<<<<<< HEAD
-msgid "With Weni Web Chat, you can integrate your Rapidpro organization as a chat on your website."
-msgstr ""
-
-msgid "This field will serve as name for your channel"
-msgstr ""
-
-msgid "URL where socket communication will take place"
-msgstr ""
-
-msgid "Message Templates"
-msgstr "Шаблоны сообщения"
-
-=======
->>>>>>> v6.5.10
 msgid "If you have an enterprise WhatsApp account, you can connect it to communicate with your contacts"
 msgstr "Если у Вас есть корпоративная учетная запись WhatsApp, Вы можете подключить ее для общения с Вашими контактами"
 
@@ -2135,11 +2116,6 @@ msgstr ""
 
 msgid "Discord Identifier"
 msgstr ""
-
-#, fuzzy
-#| msgid "WeChat identifier"
-msgid "WeniWebChat Identifier"
-msgstr "Идентификатор WeChat"
 
 msgid "Text"
 msgstr "Текст"
@@ -3631,13 +3607,8 @@ msgstr ""
 msgid "Help"
 msgstr "Помощь"
 
-<<<<<<< HEAD
-msgid "Your DT One API key and secret seem invalid. Please check them again and retry."
-msgstr "Ключ и секрет API Вашей учетной записи DT On являются недействительными. Пожалуйста, проверьте их и попробуйте снова."
-=======
 msgid "Sign Out"
 msgstr ""
->>>>>>> v6.5.10
 
 msgid "Account Token"
 msgstr "Токен Учетной записи"
@@ -4098,25 +4069,6 @@ msgstr ""
 
 msgid "Kosovo"
 msgstr "Косово"
-
-msgid "Enter the code from your authentication application"
-msgstr ""
-
-#, fuzzy
-#| msgid "Invalid phone number, try again."
-msgid "Invalid MFA token. Please try again."
-msgstr "Неверный номер телефона, попробуйте снова."
-
-msgid "Submit"
-msgstr ""
-
-#, fuzzy
-#| msgid "Account Token"
-msgid "Backup Token"
-msgstr "Токен Учетной записи"
-
-msgid "Enter one of the tokens generated when activating the two-factor login"
-msgstr ""
 
 msgid "Processing"
 msgstr "Обработка"
@@ -5278,15 +5230,6 @@ msgstr ""
 msgid "<div class='code mt-4'> Manage > API Usage > Callback API > Server Settings </div> <div class='mt-2'> Enter the Webhook URL below for the <div class='code inline py-1'>URL</div> field and the Verify Token in the <div class='code inline py-1'>Secret Key</div> field. </div> <div class='code mt-6'> Manage > API Usage > Callback API > Event Types </div> <div class='mt-2'> Check the option %(option)s </div>"
 msgstr ""
 
-msgid "With <b>Weni Web Chat,</b> you can integrate your Rapidpro organization as a chat on your website."
-msgstr ""
-
-msgid "After input a <div class='code'>Name</div> for the chat that will connect to your website, you will need to configure the <div class='code'>Base URL</div> that Rapidpro requires for sending and receiving messages. Then you will need to configure how the chat will be shown on your website."
-msgstr ""
-
-msgid "For this configuration, access <a href='https://docs.ilhasoft.mobi/l/en/channels-category/untitled-article-en'> this documentation. </a>"
-msgstr ""
-
 msgid "Your WhatsApp channel is now connected, you should be able to send and receive messages as normal."
 msgstr ""
 
@@ -6187,9 +6130,6 @@ msgstr[3] ""
 msgid "Results %(start)s - %(end)s of %(total)s"
 msgstr ""
 
-msgid "Hide"
-msgstr ""
-
 #, python-format
 msgid "Aliases for %(name)s"
 msgstr ""
@@ -6789,7 +6729,7 @@ msgid "Are you sure you want to delete everything belonging to this workspace? T
 msgstr ""
 
 #, python-format
-msgid "Your project is <b>%(org)s</b>"
+msgid "Your workspace is <b>%(org)s</b>"
 msgstr ""
 
 #, python-format
@@ -6809,9 +6749,6 @@ msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
 msgstr[3] ""
-
-msgid "Click here to edit"
-msgstr ""
 
 msgid "Manage Workspaces"
 msgstr ""
@@ -7087,10 +7024,6 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-<<<<<<< HEAD
-"      Your email address is <b>%(email)s</b>.\n"
-"    "
-=======
 "    Your email address is <b>%(email)s</b>.\n"
 "\n"
 "  "
@@ -7105,7 +7038,6 @@ msgid ""
 "    send you an email with details on how to reset your password.\n"
 "\n"
 "  "
->>>>>>> v6.5.10
 msgstr ""
 
 msgid "To disable two-factor authentication for your login, enter your current password."
@@ -7726,29 +7658,6 @@ msgstr "Нет соответствующих триггеров."
 msgid "Update Trigger"
 msgstr "Обновить Триггер"
 
-<<<<<<< HEAD
-msgid "Start a flow after a missed call."
-msgstr "Запустить поток после пропущенного звонка."
-
-msgid "Start a flow when a conversation is started by a contact."
-msgstr "Запустить поток, когда разговор начинается контактом."
-
-msgid "Start a flow when Facebook refers a contact."
-msgstr "Запустить поток, когда Facebook направляет контакт."
-
-msgid "Create a message keyword that allows people to join a group."
-msgstr "Создать ключевое слово сообщения, которое позволит людям присоединяться к группе."
-
-msgid "Start a flow in the future or on a schedule."
-msgstr "Начать поток в будущем или по расписанию."
-
-#, fuzzy
-#| msgid "Account Token"
-msgid "Backup Tokens"
-msgstr "Токен Учетной записи"
-
-=======
->>>>>>> v6.5.10
 msgid "Enter a query"
 msgstr "Ввести запрос"
 
@@ -7762,13 +7671,8 @@ msgstr ""
 msgid "No syncs yet. Check back later."
 msgstr ""
 
-<<<<<<< HEAD
-#~ msgid "%(lang1)s and %(lang2)s"
-#~ msgstr "%(lang1)s и %(lang2)s"
-=======
 msgid "Templates"
 msgstr "Шаблоны"
->>>>>>> v6.5.10
 
 msgid "Templates are synced from your account every 15 minutes."
 msgstr ""
